using Domain;

namespace UnityView.ChunkCollision
{
    internal class CreatedColliders
    {
        internal void Add(ChunkGridCoordinate chunkGridCoordinate, ChunkCollider collider)
        {

        }

        internal bool Contains(ChunkGridCoordinate chunkGridCoordinate)
        {
            return false;
        }
    }
}