namespace UnityView.ChunkCollision
{
    internal class OutOfRangeColliderDisposer
    {

    }
}